2007-07-18	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/include/system_key_trapper.h:
	* lib/src/system_key_trapper.cpp:
	* lib/src/lock_widget.cpp:
	win32: disable *all* keys while screen is being locked

2007-07-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* Makefile.svn:
	removed LUPUS-references

	* utils-win32/userinfo.cpp:
	more error-handling

	* lib/src/dsa_key.cpp:
	applied patch from Diego J. Brengi <brengi/at/inti/dot/gov/dot/ar> for
	also accepting keys that were generated using ssh-keygen

2007-06-09	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ima/resources/it.ts:
	* ima/resources/it.qm:
	* lib/resources/it.ts:
	* lib/resources/it.qm:
	updated Italian localization and removed obsolete
	translations

2007-06-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.3 release

	* lib/Makefile.am:
	fixed missing SOURCE-entry for italc_core.dll

	* ica/win32/src/Log.h:
	* ica/win32/src/Log.cpp:
	* lib/include/local_system.h:
	* lib/src/local_system.cpp:
	made log-level of WinVNC being equal to iTALC log-level

	* ica/src/isd_server.cpp:
	use QProcess::startDetached() instead of QProcess::start() for
	launching commands

	* ima/src/classroom_manager.h:
	* ima/src/classroom_manager.cpp:
	* ima/src/client.cpp:
	* ima/src/dialogs.cpp:
	* ima/src/dialogs.h:
	renamed class multiLogonDialog to remoteLogonDialog

	* ima/dialogs/multi_logon.ui:
	* ima/artwork/multilogon*png:
	renamed to "remotelogon*"

2007-06-01	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/main_window.h:
	* ima/src/main_window.cpp:
	* ima/src/client.cpp:
	stop demo on clients after student showed demo

	* ica/src/ica_main.cpp:
	create QSystemTrayIcon-object on stack rather than heap for being
	destroyed properly at exit - fixes problem with non-disappearing icon
	after exit on win32

2007-05-30	Dirk Zoellner <dirkzoellner/at/users/dot/sourceforge/dot/net>
